cmake_minimum_required(VERSION 2.6)
project(game_text C)
project(game_test_artrobert C)
project(game_test_bbellard C)
project(game_test_gacouturier C)
project(game_ext_test C)
project(game_tools_test C)

include(CTest)
enable_testing()
set(GCC_COVERAGE_COMPILE_FLAGS "-g -O0 -coverage -fprofile-arcs -ftest-coverage")
set(GCC_COVERAGE_LINK_FLAGS    "-coverage -lgcov")

add_test(test_artrobert_dummy ./game_test_artrobert dummy)
add_test(test_restart ./game_test_artrobert game_restart)
add_test(test_play_move ./game_test_artrobert game_play_move)
add_test(test_check_move ./game_test_artrobert game_check_move)
add_test(test_is_immutable ./game_test_artrobert game_is_immutable)
add_test(test_is_empty ./game_test_artrobert game_is_empty)
add_test(test_is_over ./game_test_artrobert game_is_over)
add_test(test_has_error ./game_test_artrobert game_has_error)

add_test(test_gacouturier_dummy ./game_test_gacouturier dummy)
add_test(test_game_delete ./game_test_gacouturier game_delete)
add_test(test_game_print ./game_test_gacouturier game_print)
add_test(test_game_default ./game_test_gacouturier game_default)
add_test(test_game_equal ./game_test_gacouturier game_equal)
add_test(test_game_set_square ./game_test_gacouturier game_set_square)
add_test(test_game_get_number ./game_test_gacouturier game_get_number)
add_test(test_game_copy ./game_test_gacouturier game_copy)


add_test(test_bbellard_dummy ./game_test_bbellard dummy)
add_test(test_game_new ./game_test_bbellard game_new)
add_test(test_game_new_empty ./game_test_bbellard game_new_empty)
add_test(test_game_get_square ./game_test_bbellard game_get_square)
add_test(test_game_get_next_number ./game_test_bbellard game_get_next_number)
add_test(test_game_get_next_square ./game_test_bbellard game_get_next_square)
add_test(test_game_default_solution ./game_test_bbellard game_default_solution)

add_test(test_game_new_ext ./game_ext_test game_new_ext)
add_test(test_game_new_empty_ext ./game_ext_test game_new_empty_ext)
add_test(test_game_nb_rows ./game_ext_test game_nb_rows)
add_test(test_game_nb_cols ./game_ext_test game_nb_cols)
add_test(test_game_is_wrapping ./game_ext_test game_is_wrapping)
add_test(test_game_is_unique ./game_ext_test game_is_unique)
add_test(test_game_undo ./game_ext_test game_undo)
add_test(test_game_redo ./game_ext_test game_redo)

add_test(test_game_save ./game_tools_test game_save)
add_test(test_game_load ./game_tools_test game_load)

link_directories(${CMAKE_SOURCE_DIR})

add_executable(game_text game_text.c game_aux.h game.h)
add_executable(game_test_artrobert game_test_artrobert.c)
add_executable(game_test_bbellard game_test_bbellard.c)
add_executable(game_test_gacouturier game_test_gacouturier.c)
add_executable(game_ext_test game_ext_test.c)
add_executable(game_tools_test game_tools_test.c)
add_library(game game.c game_aux.c game_ext.c game_tools.c game_private.c queue.c)


set(CMAKE_C_FLAGS "-std=c99 -g3 -Wall --coverage")
set(CMAKE_VERBOSE_MAKEFILE ON)

target_link_libraries(game_text game m)
target_link_libraries(game_test_artrobert game m)
target_link_libraries(game_test_bbellard game m)
target_link_libraries(game_test_gacouturier game m)
target_link_libraries(game_ext_test game m)
target_link_libraries(game_tools_test game m)